# Visitor-Design-Pattern

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  LICENSE  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: main.cpp  utils.hpp
source/algos/: area.cpp  area.hpp  perimeter.cpp  perimeter.hpp
source/shapes/: circle.cpp  circle.hpp  rectangle.cpp  rectangle.hpp  square.cpp  square.hpp
test/: CMakeLists.txt
test/source/: acutest.h  visitor_pattern_test.cpp
